--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "express-ip": "^1.0.3",
     "mongojs": "^2.6.0",
     "socket.io": "^2.2.0"
   }
